[package]
name = "nrgy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "6"
env_logger = "0.11"
function_name = "0.3.0"
jiff = "0.2.24"
log = "0.4"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
solaredge-modbus = { path = "solaredge-modbus" }
thiserror = "2"
toml = "1"
toml_edit = "0.25"
ureq = { version = "3.3.0", features = ["json"] }
urlencoding = "2"
