[package]
name = "nrgy"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1"
base64 = "0.22"
dirs = "6"
env_logger = "0.11"
function_name = "0.3.0"
hmac = "0.13.0"
ignorable = "0.1.4"
jiff = "0.2.24"
log = "0.4"
p256 = { version = "0.13.2", features = ["ecdh", "pem"] }
pretty_assertions = "1.4.1"
prost = "0.14.3"
prost-types = "0.14"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
sha2 = "0.11"
solaredge-modbus = { path = "solaredge-modbus" }
thiserror = "2"
toml = "1"
toml_edit = "0.25"
ureq = { version = "3.3.0", features = ["json"] }
urlencoding = "2"

[build-dependencies]
prost-build = "0.14.3"
protox = "0.9"
ureq = "3.3"
